# backend-andhara

./: .env  Dockerfile  README.md  pyproject.toml  ruff.toml
app/: main.py
app/api/: authentication.py  customer.py  customer_service.py  email_sender.py  product.py  purchase.py
app/core/: config.py  scheduler_status.py
app/models/: authentication.py  branch_stock.py  customer.py  customer_service.py  email_sender.py  product.py  purchase.py
app/persistence/db/: connection.py
app/persistence/repositories/: authentication.py  branch_stock.py  customer.py  customer_service.py  email_sender.py  product.py  purchase.py
app/services/: authentication.py  client.py  customer.py  customer_service.py  email_sender.py  product.py  purchase.py
app/utils/: customer.py  customer_service.py  email_sender.py  global_validators.py  products.py  transformers.py
documentation/: README.md
tests/: db_supabase.py  user_auth.py
