[project]
name = "backend-andhara"
version = "0.0.1"
description = "This is the backend-andhara for migrate and do the main features of the bussines"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi[standard]>=0.115.11",
    "pydantic-settings>=2.8.1",
    "pytest>=8.3.5",
    "ruff>=0.9.10",
    "supabase>=2.15.0",
]

[dependency-groups]
dev = [
    "ruff>=0.9.10",
]

# Ruff configuration
[tool.ruff]
line-length = 50
target-version = "py39"
exclude = [
    ".git",
    ".tox",
    ".venv",
    "node_modules"
]

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F"]
ignore = []
fixable = ["ALL"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
